--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id 'com.android.application' version '8.2.2' apply false
+}
+
 allprojects {
     repositories {
         google()
@@ -16,3 +20,7 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
+
+
+
