--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
-  model_viewer_plus:
+  animate_do:
 
 dev_dependencies:
   flutter_test:
